--- a/proyecto_2/airflow/docker-compose.yaml
+++ b/proyecto_2/airflow/docker-compose.yaml
@@ -1,9 +1,12 @@
 version: '3.8'
 x-airflow-common:
-  &airflow-common
+  &airflow-common  
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.6.0}
   environment:
     &airflow-common-env
+    MLFLOW_S3_ENDPOINT_URL: http://minio:9000
+    AWS_ACCESS_KEY_ID: admin
+    AWS_SECRET_ACCESS_KEY: supersecret
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
