--- a/taller_4/docker-compose-test.yaml
+++ b/taller_4/docker-compose-test.yaml
@@ -97,7 +97,7 @@ services:
     - "8089:8089"
     volumes:
       - ./:/mnt/locust
-    command: -f /mnt/locust/locustfile.py --master -H http://locustmaster:8089
+    command: -f /mnt/locust/locustfile.py --master -H http://fastapi:8000
     networks:
       - network_1
   
