add jupiter ajdjust dag

--- a/project_3/docker-compose.yaml
+++ b/project_3/docker-compose.yaml
@@ -89,6 +89,15 @@ x-airflow-common:
 
 
 services:
+  jupyter:
+    build:
+      context: ./jupiter
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./jupiter/notebooks:/work
+    environment:
+      - JUPYTER_ENABLE_LAB=yes
  
   fastapi:
     build:
