--- a/project_3/streamlit/Dockerfile
+++ b/project_3/streamlit/Dockerfile
@@ -1,20 +1,12 @@
-# Usa una imagen base de Python
-FROM python:3.9
+FROM python:3.10
 
-# Establece el directorio de trabajo
-WORKDIR /app/streamlit
+WORKDIR /app
 
-# Copia los archivos necesarios
-COPY requirements.txt .
+COPY requirements.txt ./
+COPY app.py ./
 
-# Instala las dependencias
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
-# Copia el código de la aplicación
-COPY app.py .
+EXPOSE 8502
 
-# Expone el puerto en el que se ejecutará la aplicación
-EXPOSE 8501
-
-# Comando para ejecutar la aplicación Streamlit
-CMD ["streamlit", "run", "app.py"]
+CMD ["streamlit", "run", "app.py", "--server.port=8502", "--server.address=0.0.0.0"]
