--- a/project_3/docker-compose.yaml
+++ b/project_3/docker-compose.yaml
@@ -64,8 +64,9 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
-    MINIO_ROOT_USER: 'admin'
-    MINIO_ROOT_PASSWORD: 'supersecret'
+    AWS_ACCESS_KEY_ID: 'admin'
+    AWS_SECRET_ACCESS_KEY: 'supersecret'
+    MLFLOW_S3_ENDPOINT_URL: 'http://minio:9000'
     # yamllint disable rule:line-length
     # Use simple http server on scheduler for health checks
     # See https://airflow.apache.org/docs/apache-airflow/stable/administration-and-deployment/logging-monitoring/check-health.html#scheduler-health-check-server
@@ -149,6 +150,10 @@ services:
       - "5000:5000"
     environment:
       MLFLOW_SERVER_DEFAULT_ARTIFACT_ROOT: "http://minio:9000/mlflow"
+      AWS_ACCESS_KEY_ID: 'admin'
+      AWS_SECRET_ACCESS_KEY: 'supersecret'
+      MLFLOW_S3_ENDPOINT_URL: 'http://minio:9000'
+
 
     depends_on:
       - minio
