--- a/project_3/streamlit/requirements.txt
+++ b/project_3/streamlit/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-requests
-pandas
-numpy
-matplotlib 
-scikit-learn  
+streamlit==1.34.0
+requests==2.32.1
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2 
