--- a/project_4/.github/workflows/publish-images.yml
+++ b/project_4/.github/workflows/publish-images.yml
@@ -2,6 +2,7 @@ name: publish-images
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKETHUB_USERNAME}}
