--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -18,9 +18,12 @@ jobs:
       - name: Checkout del repositorio
         uses: actions/checkout@v2
 
-      - name: Setup Docker Hub
-        run: |
-          echo -e "${DOCKERHUB_PASSWORD}" | docker login --username ${DOCKERHUB_USERNAME} --password-stdin docker.io
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
 
       - name: Compilar y etiquetar imágenes
         run: docker build -t docker.io/${DOCKERHUB_USERNAME}/${repositorio}:latest .
