--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -3,6 +3,10 @@ name: Construir y enviar imágenes Docker
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
+
 
 jobs:
   build-and-push:
