--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
       - name: Construir y enviar imágenes
         uses: docker/build-push-action@v3
