--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -22,6 +22,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
       - name: Construir y enviar imágenes
+        echo "Ruta ../../: $(pwd ../../)"
         uses: docker/build-push-action@v3
         with:
           context: ../../project_4/airflow
