solve error print path

--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -21,8 +21,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
+      - name: Imprimir ruta
+          run: |
+            echo "Ruta actual: $(pwd)"
+            echo "Ruta ../../: $(pwd ../../)"
+
       - name: Construir y enviar imágenes
-        echo "Ruta ../../: $(pwd ../../)"
         uses: docker/build-push-action@v3
         with:
           context: ../../project_4/airflow
