--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -1,4 +1,5 @@
-name: publish-images
+name: Publicar Imágenes
+
 on:
   push:
     branches: [ main ]
@@ -6,13 +7,12 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout del repositorio
         uses: actions/checkout@v3
 
       - name: Configurar Docker Hub
@@ -21,18 +21,42 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Imprimir ruta
-        run: |
-          echo "Ruta actual: $(pwd)"
-          echo "Ruta ../../: $(pwd ../../)"
+      - name: Construir y enviar imagen de Airflow
+        uses: docker/build-push-action@v3
+        with:
+          context: ./project_4/airflow
+          file: ./project_4/airflow/Dockerfile
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/airflow:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/airflow:1.0
+          push: true
 
-      - name: Construir y enviar imágenes
+      - name: Construir y enviar imagen de API
         uses: docker/build-push-action@v3
         with:
           context: ./project_4/api
           file: ./project_4/api/Dockerfile
           tags: |
-            airflow_ccps:latest
-            airflow_ccps:1.0
+            ${{ secrets.DOCKERHUB_USERNAME }}/api:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/api:1.0
           push: true
 
+      - name: Construir y enviar imagen de MLflow
+        uses: docker/build-push-action@v3
+        with:
+          context: ./project_4/mlflow
+          file: ./project_4/mlflow/Dockerfile
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/mlflow:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/mlflow:1.0
+          push: true
+
+      - name: Construir y enviar imagen de Streamlit
+        uses: docker/build-push-action@v3
+        with:
+          context: ./project_4/streamlit
+          file: ./project_4/streamlit/Dockerfile
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/streamlit:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/streamlit:1.0
+          push: true
