--- a/project_4/docker-compose.yaml
+++ b/project_4/docker-compose.yaml
@@ -50,8 +50,8 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.6.0}
-  build: ./airflow
+  image: ingccps/airflow:1.0
+  #build: ./airflow
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -91,8 +91,7 @@ x-airflow-common:
 
 services:
   jupyter:
-    build:
-      context: ./jupiter
+    image: ingccps/jupiter:1.0
     ports:
       - "8888:8888"
     volumes:
@@ -101,15 +100,12 @@ services:
       - JUPYTER_ENABLE_LAB=yes
  
   fastapi:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+    image: ingccps/fastapi:1.0
     ports:
       - "8002:8002"  
   
   streamlit:
-    build:
-      context: ./streamlit
+    image: ingccps/streamlit:1.0
     ports:
       - "8501:8501"
     depends_on:
@@ -145,7 +141,7 @@ services:
 
 
   mlflow:
-    build: ./mlflow
+    image: ingccps/mlflow:1.0
     ports:
       - "5000:5000"
     environment:
@@ -153,8 +149,6 @@ services:
       AWS_ACCESS_KEY_ID: 'admin'
       AWS_SECRET_ACCESS_KEY: 'supersecret'
       MLFLOW_S3_ENDPOINT_URL: 'http://minio:9000'
-
-
     depends_on:
       - minio
     restart: always
