--- a/project_4/api/requirements.txt
+++ b/project_4/api/requirements.txt
@@ -1,2 +1,9 @@
-fastapi==0.109.1
-uvicorn==0.27.0.post1
+fastapi==0.111.0
+pydantic==2.7.1
+pandas==2.2.2
+uvicorn==0.29.0
+mlflow==2.13.0
+boto3==1.34.112
+PyMySQL==1.1.1
+cryptography==42.0.7
+xgboost==2.0.3
