--- a/project_4/airflow/requirements.txt
+++ b/project_4/airflow/requirements.txt
@@ -1,9 +1,12 @@
 mlflow==1.30.1
-requests==2.31.0
-SQLAlchemy==1.4.52
-pandas==1.3.5
-scikit-learn==1.0.2
-joblib==1.3.2
+requests==2.28.2
+ucimlrepo==0.0.6
+imblearn
+SQLAlchemy==1.4.26
+pandas
+scikit-learn==0.24.2
+joblib==1.3.2  
 boto3==1.33.13
 mysqlclient==2.1.1
-xgboost==2.0.3
+xgboost==1.6.2
+scipy==1.7.3
