--- a/project_4/docker-compose.yaml
+++ b/project_4/docker-compose.yaml
@@ -153,18 +153,36 @@ services:
     command: --innodb-buffer-pool-size=256M --innodb-log-file-size=128M --innodb-flush-log-at-trx-commit=2
 
 
+  #mlflow:
+  #  image: ingccps/mlflow:1.0
+  #  ports:
+  #    - "5000:5000"
+  #  container_name: Mlflow
+  #  environment:
+  #    MLFLOW_SERVER_DEFAULT_ARTIFACT_ROOT: "http://minio:9000/mlflow"
+  #    AWS_ACCESS_KEY_ID: 'admin'
+  #    AWS_SECRET_ACCESS_KEY: 'supersecret'
+  #    MLFLOW_S3_ENDPOINT_URL: 'http://minio:9000'
+  #  depends_on:
+  #    - minio
+  #  restart: always
+
   mlflow:
-    image: ingccps/mlflow:1.0
-    ports:
-      - "5000:5000"
-    environment:
-      MLFLOW_SERVER_DEFAULT_ARTIFACT_ROOT: "http://minio:9000/mlflow"
-      AWS_ACCESS_KEY_ID: 'admin'
-      AWS_SECRET_ACCESS_KEY: 'supersecret'
-      MLFLOW_S3_ENDPOINT_URL: 'http://minio:9000'
-    depends_on:
-      - minio
-    restart: always
+      build: './mlflow'
+      ports:
+        - "5000:5000"
+      container_name: Mlflow
+      environment:
+        - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
+        - AWS_ACCESS_KEY_ID=admin
+        - AWS_SECRET_ACCESS_KEY_ID=supersecret
+        # MLFLOW_SERVER_DEFAULT_ARTIFACT_ROOT: "http://minio:9000/mlflow"
+      entrypoint: bash -c "mlflow server --backend-store-uri sqlite:///mlflow.db --default-artifact-root s3://mlflow/ --host 0.0.0.0"
+
+
+
+
+    
 
   minio:
     container_name: minio
